--- a/test/comments.html
+++ b/test/comments.html
@@ -50,12 +50,16 @@
                     <div class='votearrow' title='upvote'></div>
                   </a></center>
               </td>
-              <td class="title"><a
-                  href="http://geosci.uchicago.edu/~kite/doc/von_Neumann_1955.pdf"
-                  class="storylink">Can we survive technology? (1955)
-                  [pdf]</a><span class="sitebit comhead"> (<a
-                    href="from?site=uchicago.edu"><span
-                      class="sitestr">uchicago.edu</span></a>)</span></td>
+              <td class="title">
+                <a href="http://geosci.uchicago.edu/~kite/doc/von_Neumann_1955.pdf"
+                  class="storylink">
+                  Can we survive technology? (1955) [pdf]
+                </a>
+                <span class="sitebit comhead">
+                  (
+                  <a href="from?site=uchicago.edu"><span class="sitestr">uchicago.edu</span></a>
+                  )
+                </span></td>
             </tr>
             <tr>
               <td colspan="2"></td>
